--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                             <option value="custom">Custom HEX</option>
                          </select>
                      </div>
-                     <div id="custom-hex-input-container" class="hidden"> {/* Container for conditional visibility */}
+                     <div id="custom-hex-input-container" class="hidden">
                          <label for="product-edit-customHex">Custom HEX Color</label>
                          <input type="text" id="product-edit-customHex" placeholder="#RRGGBB">
                      </div>
